--- a/class11/class11.Rmd
+++ b/class11/class11.Rmd
@@ -1,6 +1,8 @@
 ---
 title: "class11"
-output: html_document
+output: 
+  html_document: 
+    keep_md: yes
 ---
 
 ```{r setup, include=FALSE}
@@ -11,6 +13,7 @@ knitr::opts_chunk$set(echo = TRUE)
 
 Q1: What proportion of PDB entries does X-ray crystallography account for? What proportion of
 structures are protein?
+89.51%
 ```{r}
 #import our PDB statistics CSV file and calculate percent structures by experimental method
 pdbstats <- read.csv("Data Export Summary.csv", row.names = 1)
@@ -19,10 +22,11 @@ percent <- (pdbstats$Total / sum(pdbstats$Total))*100
 names(percent) <- row.names(pdbstats)
 percent
 
-
 ```
 
 
 
 Q2: Type HIV in the search box on the home page and determine how many HIV-1 protease
 structures are in the current PDB?
+
+
